--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,43 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Raleway:ital,wght@1,300&display=swap');
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Nunito', sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Nunito', sans-serif;
 }
 body {
-    background-color: rgb(73, 73, 73);
-    color: rgb(255, 255, 255);
-    
+  background-color: rgb(73, 73, 73);
+  color: rgb(255, 255, 255);
 }
 
-.user{
-    margin-bottom: 50px;
-    background-color: rgb(110, 110, 110);
-    padding: 20px;
-} 
-
-.header{
-    background-color: rgb(22, 22, 22);
-    color: rgb(255, 255, 255);
-    padding: 20px;
-}
-.delete-icon{
-    float: right;
-}
-.delete-icon:hover{
-    opacity: 0.5;
-    transform: scale(1.4);
+.user {
+  margin-bottom: 50px;
+  background-color: rgb(110, 110, 110);
+  padding: 20px;
 }
 
-div form input,div form button,div form textarea{
-    background-color: rgb(73, 73, 73);
-    color: aliceblue;
-    outline: none;
-    border: 0ch;
-    margin-bottom: 20px;
-    margin-top: 20px;
+.header {
+  background-color: rgb(22, 22, 22);
+  color: rgb(255, 255, 255);
+  padding: 20px;
+}
+.delete-icon {
+  float: right;
+}
+.delete-icon:hover {
+  opacity: 0.5;
+  transform: scale(1.4);
 }
 
-div form button:hover{
-    transform: scale(1.4);
+div form input,
+div form button,
+div form textarea {
+  background-color: rgb(73, 73, 73);
+  color: aliceblue;
+  outline: none;
+  border: 0ch;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+div form button:hover {
+  transform: scale(1.4);
+}
+
+.login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  font-size: 50 px;
 }
